# standard-model-backend

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: init.sql
migrations/2023-01-18-091631_particles_table/: down.sql  up.sql
src/: handlers.rs  main.rs  models.rs  schema.rs
