[package]
name = "backend"
version = "0.1.0"
description = "Backend Service for Standard Model"
authors = ["Husni Naufal Zuhdi <husninaufalz@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/hazunanafaru/backend"
repository = "https://github.com/hazunanafaru/backend"
keywords = ["backend"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.4"
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
bytes = "1"